--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -36,5 +35,6 @@
     "dotenv-cli": "^7.4.1",
     "nodemon": "^3.1.0",
     "sqlite3": "^5.1.7"
-  }
+  },
+  "description": ""
 }
